Added tons of limits, some might be improve-able